Small changes. Whitespace etc.

--- a/app/views/products/list.scala.html
+++ b/app/views/products/list.scala.html
@@ -2,7 +2,7 @@
 
 @main("Products catalogue") {
     <h2>All products</h2>
-    <table class="table">
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>EAN</th>
