--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,6 +17,16 @@
         <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
     </head>
     <body>
+        @if(flash.containsKey("success")) {
+            <div class="alert alert-success">
+                @flash.get("success")
+            </div>
+        }
+        @if(flash.containsKey("error")) {
+            <div class="alert alert-danger">
+            @flash.get("error")
+            </div>
+        }
         <div class="container">
         @* And here's where we render the `Html` object containing
          * the page content. *@
