--- a/app/views/products/list.scala.html
+++ b/app/views/products/list.scala.html
@@ -2,6 +2,18 @@
 
 @main("Products catalogue") {
     <h2>All products</h2>
+    <script>
+        function del(urlToDelete) {
+            $.ajax({
+                url: urlToDelete,
+                type: 'DELETE',
+                success: function (results) {
+                    // Refresh the page
+                    location.reload();
+                }
+            })
+        }
+    </script>
     <table class="table table-striped">
         <thead>
             <tr>
@@ -16,8 +28,13 @@
                 <td><a href="@routes.Products.details(product.ean)">@product.ean</a></td>
                 <td><a href="@routes.Products.details(product.ean)">@product.name</a></td>
                 <td><a href="@routes.Products.details(product.ean)">@product.description</a></td>
+                <td>
+                    <a href="@routes.Products.details(product.ean)"><i class="glyphicon glyphicon-pencil"></i></a>
+                    <a onclick="del('@routes.Products.delete(product.ean)')"><i class="glyphicon glyphicon-trash"></i></a>
+                </td>
             </tr>
         }
         </tbody>
     </table>
+    <a href="@routes.Products.newProduct()" class="btn"><i class="glyphicon glyphicon-plus"></i> New product</a>
 }
